--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "0.14.0",
     "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
+    "firebase": "^10.8.1",
     "mysql2": "^3.6.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
