--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "7.1.14",
     "@nestjs/typeorm": "^10.0.0",
@@ -36,6 +37,7 @@
     "dotenv": "^16.3.1",
     "firebase": "^10.8.1",
     "mysql2": "^3.6.3",
+    "passport": "^0.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
