--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
+    "cron": "^3.1.7",
     "csurf": "^1.11.0",
     "dotenv": "^16.3.1",
     "firebase": "^10.8.1",
