--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/swagger": "7.1.14",
     "@nestjs/typeorm": "^10.0.0",
+    "@nestjs/websockets": "^10.3.8",
     "bcryptjs": "^2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
@@ -41,6 +43,7 @@
     "passport": "^0.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "socket.io": "^4.7.5",
     "typeorm": "^0.3.17",
     "web-push": "^3.6.7"
   },
