--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "mysql2": "^3.6.3",
+    "nestjs-rate-limiter": "^3.1.0",
     "passport": "^0.7.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.5",
+    "twilio": "^5.2.2",
     "typeorm": "^0.3.17",
     "web-push": "^3.6.7"
   },
